// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Inputs/Textarea Dark Background 1`] = `
.c1 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  border-radius: 25px;
  padding: 17px 20px 14px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  resize: none;
  height: 90px;
}

.c1:focus,
.c1:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c1::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c1:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::placeholder {
  color: #252525;
  font-style: italic;
}

.c0 {
  padding: 30px;
  height: 100vh;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <textarea
      className="c1"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Inputs/Textarea Light Background 1`] = `
.c1 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  border-radius: 25px;
  padding: 17px 20px 14px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  resize: none;
  height: 90px;
}

.c1:focus,
.c1:active {
  box-shadow: 0 0 10px rgba(135,135,135,0.8);
}

.c1::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c1:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c1::placeholder {
  color: #252525;
  font-style: italic;
}

.c0 {
  padding: 30px;
  height: 100vh;
  background-color: #F5F5F5;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <textarea
      className="c1"
      placeholder="Type something..."
    />
  </div>
</div>
`;
